--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,20 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
     <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+<ion-content class="home">
+  <ion-list>
+  <ion-item *ngFor="let person of people">
+    <ion-avatar item-left>
+          <img src="{{person.avatar}}">
+        </ion-avatar>
+        <h2>{{person.first_name}} {{person.last_name}}</h2>
+  </ion-item>
+</ion-list>
+<ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+  <ion-infinite-scroll-content></ion-infinite-scroll-content>
+</ion-infinite-scroll>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
 </ion-content>
